--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -10,6 +10,7 @@ a:hover{
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
+/* 搜索框 */
 .navbar-wrapper {
     position: absolute;
     top: 0;
