--- a/WebContent/assets/css/reset.css
+++ b/WebContent/assets/css/reset.css
@@ -27,6 +27,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
 	line-height: 1;
 }
+a{
+	text-decoration:none;}
 ol, ul {
 	list-style: none;
 }
